Añadiendo Pruebas RatingRepositoryAdapter Cobertura 95%